update
	修改：      edh/conf-template/hadoop/conf/mapred-site.xml
	修改：      edh/conf-template/hadoop/conf/yarn-site.xml
	新文件：    edh/conf-template/hbase/conf/hadoop-metrics.properties
	修改：      edh/conf-template/hbase/conf/hbase-env.sh
	新文件：    edh/conf-template/hbase/conf/hbase-policy.xml
	修改：      edh/conf-template/hbase/conf/hbase-site.xml
	删除：      edh/conf-template/hbase/conf/jaas.conf
	新文件：    edh/conf-template/hbase/conf/jmxremote.access
	新文件：    edh/conf-template/hbase/conf/jmxremote.passwd
	修改：      edh/ntp.conf
	修改：      edh/scripts/hadoop/hadoop-acl.sh
	修改：      edh/scripts/hadoop/hadoop-service.sh
	修改：      edh/scripts/hadoop/hdfs-cluster.sh
	修改：      edh/scripts/hadoop/mapred-cluster.sh
	修改：      edh/scripts/hadoop/rack_map.sh
	修改：      edh/scripts/hbase/hbase-acl.rb
	修改：      edh/scripts/hbase/hbase-acl.sh
	修改：      edh/scripts/hbase/hbase-cluster.sh
	修改：      edh/scripts/hbase/hbase-service.sh
	修改：      edh/scripts/hive/hive-acl.sh
	修改：      edh/scripts/hive/hive-cluster.sh
	修改：      edh/scripts/hive/hive-metastore-service.sh
	修改：      edh/scripts/initialize.sh
	修改：      edh/scripts/oozie/oozie-cluster.sh
	修改：      edh/scripts/zookeeper/zookeeper-cluster.sh
	修改：      edh/scripts/zookeeper/zookeeper-service.sh
	修改：      patch/patch1/ruby/hbase/admin.rb
	修改：      patch/patch1/ruby/hbase/coprocessor.rb
	修改：      patch/patch1/ruby/shell/commands/reload_skipped_storefiles.rb
	修改：      script/config.sh
	修改：      script/config_yum_server.sh
	修改：      script/format_cluster.sh
	修改：      script/format_namenode.sh
	修改：      script/hostname.sh
	修改：      script/install_hadoop.sh
	修改：      script/other/checkDeviceExists.sh
	修改：      script/other/checkandgethostname.sh
	修改：      script/other/cluster_csv.sh
	修改：      script/other/copyconfigurefile.sh
	修改：      script/other/decommission_maintain.sh
	修改：      script/other/findhost.sh
	修改：      script/other/gethaparam.sh
	修改：      script/other/gethostip.sh
	修改：      script/other/modifyhosts.sh
	修改：      script/other/modify